# ai-business-hub

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  changelog_todo.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  turbo.json
agents/: .coverage  .env.example  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  registry.py  requirements.txt
agents/a2a/: __init__.py  agent_card.py  client.py  discovery.py
agents/ag_ui/: encoder.py
agents/agentos/: __init__.py  config.py  factory.py  health.py
agents/api/: __init__.py
agents/branding/: README.md  __init__.py  asset_generator_agent.py  brand_auditor_agent.py  brand_orchestrator_agent.py  brand_strategist_agent.py  team.py  visual_identity_designer_agent.py  voice_architect_agent.py
agents/ccr_config/: ccr_config_template.json
agents/config/: __init__.py
agents/constants/: __init__.py  dm_constants.py
agents/context/: __init__.py  context_instructions.py  context_types.py  test_context_instructions.py  test_context_types.py
agents/core_platform/: README.md  approval_agent.py  orchestrator_agent.py
agents/crm/: README.md  __init__.py  data_enricher_agent.py  lead_scorer_agent.py  pipeline_agent.py
agents/gateway/: __init__.py  agent.py  approval_events.py  hitl_tools.py  layout_tools.py  long_tasks.py  state_emitter.py  test_state_emitter_progress.py  tools.py
agents/hitl/: __init__.py  approval_bridge.py  approval_events.py  decorators.py  task_manager.py  test_approval_bridge.py  test_decorators.py  test_task_manager.py
agents/knowledge/: __init__.py  (+3 more)
(+3076 files in other folders)
