[project]
name = "hyvve-agentos"
version = "0.2.0"
description = "HYVVE AgentOS - AI Agent Runtime with A2A and AG-UI protocols"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Agno Framework with Protocol Support
    "agno[agui,a2a]>=0.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # Authentication
    "pyjwt>=2.8.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Utilities
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "limits>=3.7.0",

    # AG-UI Streaming (Server-Sent Events)
    "sse-starlette>=1.8.0",

    # A2A Performance (High-performance JSON)
    "orjson>=3.9.0",

    # RAG Knowledge Base
    "pgvector>=0.2.5",
    "tiktoken>=0.5.0",

    # Document Processing
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # BYOAI Key Encryption
    "cryptography>=41.0.0",

    # Model Context Protocol
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.2",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
